update path to redirect

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script>
-        window.location.href = "/chemsmart-docs/docs/build/html/index.html";
+        window.location.href = "./docs/build/html/index.html";
     </script>
 </head>
 </html>
