update html title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>CHEMSMART Documentations | Zhang Lab @ The Chinese University of Hong Kong</title>
     <script>
         window.location.href = "./docs/build/html/index.html";
     </script>
